--- a/src/gestioncolloque/MenuConsulter.form
+++ b/src/gestioncolloque/MenuConsulter.form
@@ -158,6 +158,7 @@
             <Property name="text" type="java.lang.String" value="Rechercher"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonRechercheCMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRechercheCActionPerformed"/>
           </Events>
         </Component>
